package com.sep490.slms2026.entity;

import com.sep490.slms2026.enums.PropertyType;
import com.sep490.slms2026.enums.RoomStatus;
import jakarta.persistence.*;
import lombok.*;

import java.io.Serializable;
import java.math.BigDecimal;

@Entity
@Table(name = "rooms")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class Room implements Serializable {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "property_id", nullable = false)
    private Property property;

    @Column(name = "room_number", nullable = false)
    private String roomNumber;

    @Column(name = "floor")
    private Integer floor;

    /** Giá niêm yết (listedPrice). */
    @Column(nullable = true)
    private BigDecimal price;

    /** Giá đang áp dụng (hợp đồng hiện hành). Phòng trống = listedPrice. */
    @Column(name = "applied_price")
    private BigDecimal appliedPrice;

    @Column(nullable = true)
    private BigDecimal deposit;

    @Column(nullable = false)
    private Double area;

    @Column(name = "length_m")
    private Double length;

    @Column(name = "width_m")
    private Double width;

    @Column(name = "max_occupants")
    private Integer maxOccupants;

    // Dùng cho wholehouse: mô tả cấu trúc bên trong ("3PN, 1 bếp, 2WC")
    @Column(name = "structure_description", columnDefinition = "TEXT")
    private String structureDescription;

    @Column(name = "image_urls", columnDefinition = "TEXT")
    private String imageUrls;

    @Enumerated(EnumType.STRING)
    @Column(name = "room_type", nullable = false)
    private PropertyType propertyType;

    @Enumerated(EnumType.STRING)
    @Column(nullable = false)
    private RoomStatus status = RoomStatus.DRAFT;

    // Null nếu tòa dùng đồng hồ chung, có giá trị nếu phòng có đồng hồ riêng
    @Column(name = "electric_meter_code")
    private String electricMeterCode;

    @Column(name = "water_meter_code")
    private String waterMeterCode;

    /**
     * Cấu hình tách phần nguyên / thập phân khi OCR chỉ số (mentor feedback).
     * Mặc định VN: điện 5+1, nước 5+3.
     */
    @Column(name = "elec_integer_digits")
    @Builder.Default
    private Integer elecIntegerDigits = 5;

    @Column(name = "elec_decimal_digits")
    @Builder.Default
    private Integer elecDecimalDigits = 1;

    @Column(name = "water_integer_digits")
    @Builder.Default
    private Integer waterIntegerDigits = 5;

    @Column(name = "water_decimal_digits")
    @Builder.Default
    private Integer waterDecimalDigits = 3;

    @Column(name = "is_deleted", nullable = false)
    private boolean deleted = false;

    @PrePersist
    @PreUpdate
    private void applyMeterDigitDefaults() {
        if (elecIntegerDigits == null) {
            elecIntegerDigits = 5;
        }
        if (elecDecimalDigits == null) {
            elecDecimalDigits = 1;
        }
        if (waterIntegerDigits == null) {
            waterIntegerDigits = 5;
        }
        if (waterDecimalDigits == null) {
            waterDecimalDigits = 3;
        }
    }
}